# statefs-contextkit

./: .gitignore  CMakeLists.txt
doc/: Doxyfile
include/statefs/qt/: util.hpp
rpm/: statefs-contextkit-subscriber.spec  statefs-contextkit.spec
src/: .gitignore  CMakeLists.txt  QCoreAppWrapper.cpp  QCoreAppWrapper.hpp  bridge.cpp  bridge.hpp  contextkit-statefs-qt4.pc  contextkit-statefs-qt4.pc.in  contextkit-statefs.pc  contextkit-statefs.pc.in  property.cpp  property.hpp  provider.cpp  provider.hpp  provider_impl.cpp  qtpreload.cpp  register.c.in  statefs-contextkit-register.in  testprop.cpp  util.cpp  util.hpp  wrapqt.cpp  wrapqt.hpp
tests/: CMakeLists.txt
